fix alignment issues between links and divs in nav

--- a/src/sass/components/EditsNav.scss
+++ b/src/sass/components/EditsNav.scss
@@ -15,6 +15,7 @@
     border-bottom: 1px solid $color-gray-lighter;
     display: block;
     li {
+      line-height: normal;
       vertical-align: top;
       width: 20%;
 
@@ -43,7 +44,7 @@
         font-weight: 700;
         height: 30px;
         margin: -1em auto 0.5rem;
-        padding: 3px;
+        padding: 4px 3px;
         width: 30px;
       }
       &.active {
